Fixed intro on mobile view

--- a/css/intro.css
+++ b/css/intro.css
@@ -11,15 +11,8 @@
     background-image: linear-gradient(to top, #e6e9f0 0%, #eef1f5 100%);
     margin-bottom: -150px;
     z-index: 1;
-}
-
-.intro-bg{
-    position: absolute;
-    top: 10%;
-    left: 10%;
-    z-index: 1;
-    height: 30%;
-    opacity: 0;
+    max-height: 100vh;
+    overflow: hidden;
 }
 
 .intro .text{
@@ -134,7 +127,30 @@
 /* Media queries */
 
 @media screen and (max-width: 800px){
+    .intro{
+        display: grid;
+        padding-top: 72px;
+    }
+    .intro .text{
+        width: 100%;
+        max-width: 100vw;
+        text-align: center;
+        margin: 0px !important;
+        font-size: 24px;
+        padding: 0px;
+        padding-top: 100px;
+    }
 
+    .intro .see-projects{
+        margin: 0px auto;
+    }
+
+    .intro .intro-icon{
+        width: 100%;
+    }
+    .intro .intro-icon img{
+        display: block;
+    }
 }
 
 
